<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@+id/titlea_fl_main"
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent" android:layout_height="fill_parent">
    <ImageView android:id="@+id/titlea_iv_main" android:adjustViewBounds="true"
		android:layout_width="fill_parent" android:layout_height="wrap_content" 
		android:src="@drawable/m80_sc_a01c01_01_main" android:scaleType="centerCrop"></ImageView>
    <ImageView android:id="@+id/pagea_iv_Background_fade" android:adjustViewBounds="true"  
    	android:layout_width="fill_parent" android:layout_height="wrap_content" 
    	android:src="@drawable/shadow" android:scaleType="centerCrop"></ImageView>
    <LinearLayout android:id="@+id/titlea_ll_container" android:layout_width="fill_parent" android:layout_height="fill_parent" android:orientation="vertical">
	    <LinearLayout android:id="@+id/titlea_ll_top" 
	    	android:layout_width="fill_parent" android:layout_height="wrap_content" android:padding="20dip">
	        <TextView android:id="@+id/titlea_tv_title" 
	        	android:text="@string/application_name" android:textSize="24dip" android:textColor="#ffffff" 
	        	android:shadowColor="#000000" android:shadowDx="1.5" android:shadowDy="1.5" android:shadowRadius="2"
	        	android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_gravity="center"></TextView>
	    </LinearLayout>
	    <ScrollView android:id="@+id/titlea_sv_ScrollContainer" 
	    	android:layout_width="fill_parent" android:layout_height="fill_parent" 
	    	android:paddingBottom="10dip" android:paddingLeft="10dip" android:paddingTop="10dip" android:fillViewport="true">
	    	
		    <LinearLayout android:id="@+id/titlea_ll_buttonContainer"
		    	android:orientation="vertical" android:padding="10dip" 
		    	android:layout_height="fill_parent" android:layout_width="fill_parent" android:paddingRight="10dip">
	            <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="vertical" android:id="@+id/titlea_ll_eula_text" android:paddingBottom="20dip">
			        <TextView android:id="@+id/titlea_tv_message" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/eula_text"  android:typeface="sans"  android:shadowColor="#000000" android:shadowDx="1.5" android:shadowDy="1.5" android:shadowRadius="1.5" android:textColor="#ffffff"></TextView>
		        </LinearLayout>
		        <LinearLayout android:id="@+id/titlea_ll_buttonContainer" 
		        	android:orientation="horizontal" android:padding="10dip" 
		        	android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_gravity="center|bottom">
		            <Button android:id="@+id/titlea_b_agree" android:text="@string/button_agree" 
		            	android:layout_margin="10dip" android:layout_height="wrap_content" android:layout_width="95dip"></Button>
		            <Button android:id="@+id/titlea_b_disagree" android:text="@string/button_disagree" 
		            	android:layout_height="wrap_content" android:layout_margin="10dip" android:layout_width="95dip"></Button>
			    </LinearLayout>
	   		</LinearLayout>
	   		
	    </ScrollView>
    </LinearLayout> 
</FrameLayout>
